--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
             'com.codeborne:xls-test:1.4.0',
             'com.opencsv:opencsv:5.6',
             'org.hamcrest:hamcrest-all:1.3',
+            'com.fasterxml.jackson.core:jackson-databind:2.0.1',
             'com.google.code.gson:gson:2.9.0')
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
