--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 group 'guru.qa'
@@ -17,6 +17,8 @@ dependencies {
             'com.codeborne:xls-test:1.4.0',
             'com.opencsv:opencsv:5.6',
             'org.hamcrest:hamcrest-all:1.3',
+            'commons-io:commons-io:2.11.0',
+            'com.itextpdf:itextpdf:5.5.13',
             'com.fasterxml.jackson.core:jackson-databind:2.0.1',
             'com.google.code.gson:gson:2.9.0')
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
